--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev": "dotenv -- turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write .",
-    "graph": "npx nx graph",
-    "dev": "dotenv -- turbo run dev"
+    "graph": "npx nx graph"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
-    "turbo": "latest"
+    "turbo": "^1.13.3"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
