--- a/apps/ronaldotieno/package.json
+++ b/apps/ronaldotieno/package.json
@@ -35,13 +35,16 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltejs/adapter-vercel": "^5.3.0",
     "aos": "^2.3.4",
     "axios": "^1.5.1",
     "cheerio": "^1.0.0-rc.12",
     "d3": "^7.8.5",
     "gsap": "file:src/gsap/gsap-bonus.tgz",
+    "i": "^0.3.7",
     "lucide-svelte": "^0.279.0",
     "motion": "^10.16.4",
+    "pnpm": "^9.1.3",
     "rehype-slug": "^6.0.0",
     "remark-toc": "^9.0.0",
     "remark-unwrap-images": "^4.0.0",
