--- a/apps/crm/package.json
+++ b/apps/crm/package.json
@@ -13,6 +13,7 @@
 		"@iconify/svelte": "^3.1.6",
 		"@sveltejs/adapter-auto": "^3.2.0",
 		"@sveltejs/adapter-netlify": "^3.0.2",
+		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.14",
