--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
 		"@playwright/test": "^1.42.1",
 		"@repo/eslint-config": "workspace:*",
 		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@sveltejs/kit": "^2.5.2",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@typescript-eslint/eslint-plugin": "^7.1.0",
