--- a/apps/work-demo/package.json
+++ b/apps/work-demo/package.json
@@ -27,5 +27,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"MyRon": "link:@repo/ui/components/MyRon",
+		"components": "link:@repo/ui/components",
+		"ui": "link:@repo/ui"
+	}
 }
