--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"dependencies": {
-		"@repo/ui": "workspace:*",
-		"react": "^18.3.1"
+		"@repo/ui": "workspace:*"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.42.1",
@@ -27,11 +26,14 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@typescript-eslint/eslint-plugin": "^7.1.0",
 		"@typescript-eslint/parser": "^7.1.0",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
+		"postcss": "^8.4.38",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
 		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.6",
+		"tailwindcss": "^3.4.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
 		"vite": "^5.1.4",
