--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"name": "ronpulse",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -9,9 +10,12 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
+    "tailwindcss": "^3.4.3",
     "turbo": "^1.13.3"
   },
   "packageManager": "pnpm@8.9.0",
