--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,7 +11,8 @@
     }
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "vite build"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
