--- a/apps/work-demo/package.json
+++ b/apps/work-demo/package.json
@@ -32,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"@repo/ui": "workspace:*",
-		"@ron/utils": "workspace:*"
+		"@ron/utils": "workspace:*",
+		"@supabase/supabase-js": "^2.43.4"
 	}
 }
