--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ronpulse",
+  "name": "ronpulse",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -16,8 +16,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
     "tailwindcss": "^3.4.3",
-    "turbo": "^1.13.3"
-  },
+    "turbo": "^1.13.3" },
   "packageManager": "pnpm@8.9.0",
   "engines": {
     "node": ">=18"
