--- a/apps/work-demo/package.json
+++ b/apps/work-demo/package.json
@@ -33,6 +33,9 @@
 	"dependencies": {
 		"@repo/ui": "workspace:*",
 		"@ron/utils": "workspace:*",
-		"@supabase/supabase-js": "^2.43.4"
+		"@supabase/supabase-js": "^2.43.4",
+		"install": "^0.13.0",
+		"particles.js": "^2.0.0",
+		"swiper": "^11.1.4"
 	}
 }
