--- a/apps/work-demo/package.json
+++ b/apps/work-demo/package.json
@@ -34,6 +34,7 @@
 		"@repo/ui": "workspace:*",
 		"@ron/utils": "workspace:*",
 		"@supabase/supabase-js": "^2.43.4",
+		"@tsparticles/engine": "^3.4.0",
 		"install": "^0.13.0",
 		"particles.js": "^2.0.0",
 		"swiper": "^11.1.4"
