Docker fr for debian improvements

--- a/debian-docked/Dockerfile
+++ b/debian-docked/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Debian base image
-FROM debian:latest
+FROM ubuntu:latest
 
 # Set environment variables
 ENV DEBIAN_FRONTEND=noninteractive
@@ -12,15 +12,17 @@ RUN apt-get update && \
     wget \
     git \
     vim \
-    neovim \
     zsh \
+    eza \
+    bat \
+    neovim \
     sudo \
     ca-certificates \
     software-properties-common \
     python3-pip
 
-# Install Node.js 18
-RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
+ #Install Node.js LTS
+RUN curl -fsSL https://deb.nodesource.com/setup_lts.x | bash - && \
     apt-get install -y nodejs
 
 # Install pnpm version 8.9.0
@@ -31,26 +33,28 @@ RUN useradd -m -s /bin/zsh ronald-debian && \
     echo 'ronald-debian ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 # Switch to the non-root user
-USER ronald-debian
+#USER ronald-debian
+USER root
 WORKDIR /home/ronald-debian
 
-# Ensure the directory is empty before cloning the repository
+# Ensure the directory is empty before cloning the repository..
 RUN rm -rf /home/ron/ronald-debian/ronfiles
+
 # Clone the ronfiles repository
 RUN git clone https://github.com/ronaldlat/ronfiles.git /home/ronald-debian/ronfiles
 
 # Set up the nvim configuration
-RUN mkdir -p /home/ronald-debian/.config/nvim && \
-    cp -r /home/ronald-debian/ronfiles/nvim/* /home/ronald-debian/.config/nvim/
+RUN  mkdir -p $HOME/.config/nvim && \
+    cp  -fr /home/ronald-debian/ronfiles/nvim/* $HOME/.config/nvim/
 
-#install zapzsh
-#USER root
-#RUN zsh -c 'curl -s https://raw.githubusercontent.com/zap-zsh/zap/master/install.zsh | zsh -- --branch release-v1'
+USER root
+RUN zsh
+#RUN zsh -c 'curl -s https://raw.githubusercontent.com/zap-zsh/zap/master/install.zsh | zsh -- --branch release-v1 -k'
 RUN bash /home/ronald-debian/ronfiles/tools/setup.sh
+RUN rm ~/.zshrc
 
 # Set up zsh and source .zshrc
-RUN ln -fs /home/ronald-debian/ronfiles/.zshrc /home/ronald-debian/.zshrc
-#RUN chsh  $(which zsh)
+RUN ln -fs /home/ronald-debian/ronfiles/.zshrc $HOME/.zshrc
 
 # Clean up as root user
 USER root
@@ -58,6 +62,6 @@ RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 # Set the default command to zsh as non-root user
-USER ronald-debian
-CMD ["zsh"]
+#USER ronald-debian
+CMD ["zsh", "-l"]
 
