--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "dotenv -- turbo run dev",
+    "dev work": "dotenv -- turbo run dev --filter=work-demo",
     "lint": "turbo run lint",
     "format": "prettier --write .",
     "graph": "npx nx graph"
@@ -16,7 +17,8 @@
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
     "tailwindcss": "^3.4.3",
-    "turbo": "^1.13.3" },
+    "turbo": "^1.13.3"
+  },
   "packageManager": "pnpm@8.9.0",
   "engines": {
     "node": ">=18"
