--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "dotenv -- turbo run dev",
-    "dev work": "dotenv -- turbo run dev --filter=work-demo",
+    "dev-work": "dotenv -- turbo run dev --filter=work-demo",
     "lint": "turbo run lint",
     "format": "prettier --write .",
     "graph": "npx nx graph"
