--- a/apps/eballers/package.json
+++ b/apps/eballers/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "work-demo",
+	"name": "eballers",
 	"version": "0.0.1",
+	"private": true,
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -14,30 +15,25 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.0",
+		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
-		"daisyui": "^4.11.1",
-		"eslint": "^8.56.0",
+		"daisyui": "^4.12.2",
+		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^3.4.4",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@repo/ui": "workspace:*",
-		"@ron/utils": "workspace:*",
-		"@supabase/supabase-js": "^2.43.4",
-		"@tsparticles/engine": "^3.4.0",
-		"install": "^0.13.0",
-		"particles.js": "^2.0.0",
-		"pocketbase": "^0.21.3",
-		"swiper": "^11.1.4"
+		"pocketbase": "^0.21.3"
 	}
 }
