--- a/apps/work-demo/package.json
+++ b/apps/work-demo/package.json
@@ -35,9 +35,16 @@
 		"@ron/utils": "workspace:*",
 		"@supabase/supabase-js": "^2.43.4",
 		"@tsparticles/engine": "^3.4.0",
+		"bits-ui": "^0.21.7",
+		"clsx": "^2.1.0",
+		"embla-carousel-autoplay": "^8.1.5",
+		"embla-carousel-svelte": "^8.0.4",
 		"install": "^0.13.0",
 		"particles.js": "^2.0.0",
 		"pocketbase": "^0.21.3",
-		"swiper": "^11.1.4"
+		"svelte-radix": "^1.1.0",
+		"swiper": "^11.1.4",
+		"tailwind-merge": "^2.2.2",
+		"tailwind-variants": "^0.2.1"
 	}
 }
