--- a/apps/crm/package.json
+++ b/apps/crm/package.json
@@ -25,6 +25,7 @@
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"pnpm": "8.9.0",
 		"vite": "^5.0.0"
 	},
 	"type": "module",
