--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "dotenv -- turbo run dev",
+    "dev": "turbo run dev",
     "dev-work": "dotenv -- turbo run dev --filter=work-demo",
     "dev-eballers": "dotenv -- turbo run dev --filter=eballers",
     "lint": "turbo run lint",
@@ -17,9 +17,9 @@
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
     "tailwindcss": "^3.4.3",
-    "turbo": "^1.13.3"
+    "turbo": "^2.0.6"
   },
-  "packageManager": "pnpm@8.9.0",
+  "packageManager": "pnpm@8.15.6",
   "engines": {
     "node": ">=18"
   },
