--- a/turbo.json
+++ b/turbo.json
@@ -3,8 +3,9 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs":["$TURBO_DEFAULT", ".env*"],
-      "outputs": [".svelte-kit/**", ".vercel/**"]
+      "inputs": ["$TURBO_DEFAULT", ".env*"],
+      "outputs": [".svelte-kit/**", ".vercel/**"],
+      "env": ["PUBLIC_SUPABASE_URL", "PUBLIC_SUPABASE_ANON_KEY"]
     },
     "lint": {},
     "dev": {
